--- a/QuotesGenerator/Base.lproj/Main.storyboard
+++ b/QuotesGenerator/Base.lproj/Main.storyboard
@@ -1,24 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="QuVC" id="BYZ-38-t0r" customClass="ViewController" customModule="QuotesGenerator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="명언 생성기" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggp-4v-AsW">
+                                <rect key="frame" x="24" y="68" width="366" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FTQ-Fk-6WT">
+                                <rect key="frame" x="24" y="113" width="366" height="200"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eOx-eF-LjC">
+                                        <rect key="frame" x="20" y="20" width="326" height="140"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bln-s3-nNL">
+                                        <rect key="frame" x="20" y="180" width="326" height="0.0"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="eOx-eF-LjC" secondAttribute="trailing" constant="20" id="56g-R5-btT"/>
+                                    <constraint firstItem="bln-s3-nNL" firstAttribute="top" secondItem="eOx-eF-LjC" secondAttribute="bottom" constant="20" id="5Mn-fR-1K7"/>
+                                    <constraint firstAttribute="bottom" secondItem="bln-s3-nNL" secondAttribute="bottom" constant="20" id="5a9-Ln-bH8"/>
+                                    <constraint firstItem="bln-s3-nNL" firstAttribute="leading" secondItem="FTQ-Fk-6WT" secondAttribute="leading" constant="20" id="DKG-ZC-EAH"/>
+                                    <constraint firstAttribute="height" constant="200" id="Fte-Ip-Vpd"/>
+                                    <constraint firstItem="eOx-eF-LjC" firstAttribute="leading" secondItem="FTQ-Fk-6WT" secondAttribute="leading" constant="20" id="Rha-Ln-0Jm"/>
+                                    <constraint firstItem="eOx-eF-LjC" firstAttribute="top" secondItem="FTQ-Fk-6WT" secondAttribute="top" constant="20" id="l3q-D2-QWy"/>
+                                    <constraint firstAttribute="trailing" secondItem="bln-s3-nNL" secondAttribute="trailing" constant="20" id="rze-J8-I1t"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VAA-om-SAA">
+                                <rect key="frame" x="169" y="333" width="76.5" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="명언 생성"/>
+                                <connections>
+                                    <action selector="tapQuoteGeneratorButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ocj-Dn-D4D"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ggp-4v-AsW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="0ls-o0-2KQ"/>
+                            <constraint firstItem="FTQ-Fk-6WT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="Bx6-tG-YAY"/>
+                            <constraint firstItem="VAA-om-SAA" firstAttribute="top" secondItem="FTQ-Fk-6WT" secondAttribute="bottom" constant="20" id="DX3-Yj-Nip"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="FTQ-Fk-6WT" secondAttribute="trailing" constant="24" id="Nwp-ys-XBv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ggp-4v-AsW" secondAttribute="trailing" constant="24" id="rla-do-VIu"/>
+                            <constraint firstItem="VAA-om-SAA" firstAttribute="centerX" secondItem="FTQ-Fk-6WT" secondAttribute="centerX" id="trg-U7-5Vo"/>
+                            <constraint firstItem="FTQ-Fk-6WT" firstAttribute="top" secondItem="ggp-4v-AsW" secondAttribute="bottom" constant="24" id="ubl-sm-cIH"/>
+                            <constraint firstItem="VAA-om-SAA" firstAttribute="top" secondItem="FTQ-Fk-6WT" secondAttribute="bottom" constant="20" id="zH6-0d-cDP"/>
+                            <constraint firstItem="ggp-4v-AsW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="zOS-t5-Jgh"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="nameLabel" destination="bln-s3-nNL" id="UHl-tz-Znj"/>
+                        <outlet property="quoteLabel" destination="eOx-eF-LjC" id="CMn-Av-WV9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="71.651785714285708"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
